--- a/app/assets/stylesheets/css/font-awesome.css
+++ b/app/assets/stylesheets/css/font-awesome.css
@@ -6,14 +6,14 @@
  * -------------------------- */
 
 
-
+/*
 @font-face {
   font-family: 'FontAwesome';
   src: font-url('fontawesome-webfont.eot?v=4.2.0');
   src: font-url('fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), font-url('fontawesome-webfont.woff?v=4.2.0') format('woff'), font-url('fontawesome-webfont.ttf?v=4.2.0') format('truetype'), font-url('fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
-}
+}*/
 /*@font-face {
 font-family: "FontAwesome";
 src: font-url('fontawesome-webfont.eot');
@@ -100,7 +100,7 @@ font-style: normal;
     transform: rotate(359deg);
   }
 }
-/*@keyframes fa-spin {
+@keyframes fa-spin {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
@@ -109,7 +109,7 @@ font-style: normal;
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg);
   }
-}*/
+}
 .fa-rotate-90 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
   -webkit-transform: rotate(90deg);
