Blog Views and layout changes done

--- a/app/views/blog/addons/_blog_subscription.html.erb
+++ b/app/views/blog/addons/_blog_subscription.html.erb
@@ -2,7 +2,7 @@
 
   <h4 class="title">Subscribe to our Blog</h4>
 
-  <form action="" method="post">
+  <form action="http://www2.harmoney.com/l/46842/2014-07-28/7g2y" method="post">
     <div class="row row-top-0">
       <div class="col-md-12 no-padding clear-fix-top-20">
         <label for="first_name">First Name</label><br>
