--- a/app/views/blog/addons/_search.html.erb
+++ b/app/views/blog/addons/_search.html.erb
@@ -10,7 +10,7 @@
 
 		<div class="col-xs-2 no-pad-right">
 			<button type="submit" class="btn btn-primary search-button">
-	    	Search
+	    	<%= image_tag asset_path("glass.png") %>
 	    </button>
 		</div>
 	  
