--- a/app/views/refinery/blog/categories/show.html.erb
+++ b/app/views/refinery/blog/categories/show.html.erb
@@ -1,7 +1,7 @@
 <section class='row custom-row sub-search-header'>
   <div class="container">
     <section class="col-md-12">
-      <%= @tag_name.titleize %>
+      <%= @category.title %>
     </section>
   </div>
 </section>
