--- a/app/views/refinery/blog/posts/_post.html.erb
+++ b/app/views/refinery/blog/posts/_post.html.erb
@@ -1,37 +1,77 @@
-<% flash.each do |key, value| %>
- <div id='flash' class="flash flash_<%= key %>">
-   <%= value %>
- </div>
-<% end %>
 <article id="blog_post">
-  <header>
-    <h1><%= @post.title %></h1>
-    <section class='details'>
-      <time datetime="<%=l @post.published_at.to_date, :format => :default %>" class='posted_at'>
-        <%= t('created_at', :scope => 'refinery.blog.shared.posts', :when => l(@post.published_at.to_date, :format => :short)) %>
-      </time>
-      <%= content_tag(:div, "#{t('by', :scope => 'refinery.blog.posts.show')} #{@post.author.username}", :class => "blog_author") if @post.author.present? %>
-      <% if @post.source_url.present? %>
-        <div class='blog_source'>
-          <%= "#{t('source', :scope => 'refinery.blog.posts.show')}: " %>
-          <%= link_to (@post.source_url_title.blank? ? @post.source_url : @post.source_url_title), @post.source_url %>
+
+  <header class="row row-top-0">
+    <div class="col-md-4 no-padding">
+      <% if @post.image.present? %>
+        <div class="blog-image blog-image-big blog-image-shrink-center" style="background: url('<%= @post.image.url %>') no-repeat center bottom;">
+        </div>
+      <% else %>
+        <div class="blog-image blog-image-shrink-center shrink-center">
+          <%= @post.title %>
         </div>
       <% end %>
-      <% if (categories = @post.categories).any? %>
-        <aside class='filled_in'>
-          <%= t('filled_in', :scope => 'refinery.blog.posts.show') %>
-          <% categories.each_with_index do |category, index| %>
-            <%= link_to category.title, refinery.blog_category_path(category) -%><%= ',' if index < ((categories.length) - 1) %>
+    </div>
+    <div class="col-md-8 shrink-center" style="padding-left: 40px;">
+      <h1 class="bolder"><%= @post.title %></h1>
+
+      <section class='details top-margin'>
+        <section class='row row-top-0 details'>          
+          <% if @allow_author %>
+            <section class='col-md-<%= @column_count %> no-padding'>
+              <b>Author:</b>
+              <a target="_blank" href="<%= gplus_link(@post)%>?rel=author"><%= author_name(@post) %></a>
+            </section>
           <% end %>
-        </aside>
-      <% end %>
-    </section>
+
+          <section class='col-md-<%= @column_count %> no-padding'>
+            <b>Posted on:</b>
+            <%= @post.published_at.strftime("%B %d, %Y") if @post.published_at.present? %>
+          </section>
+
+          <section class='col-md-<%= @column_count %> no-padding'>
+            <b>Comments:</b>
+            <% comments = @post.comments %>
+            <%= comments.any? ? "#{pluralize(comments.length, 'comment')}" : "No comments" %>
+          </section>
+
+          <section class='col-md-<%= @column_count %> no-padding'>
+            <b>Categories:</b>
+            <%= HtmlHelper.get_categories_html(@post, refinery).html_safe %>
+          </section>
+
+        </section>
+      </section>
+    </div>
   </header>
+
+  <hr class="light-grey" />
+
   <%= @post.body.html_safe %>
 
-  <% if Refinery::Blog::Post::ShareThis.enabled? %>
-    <span class="st_sharethis" displayText="ShareThis"></span>
+  <% if @post.rating %>
+    <div class="visuallyhidden">
+      <div itemscope itemtype="http://data-vocabulary.org/Review">
+        <span itemprop="itemreviewed"><%= @post.title %></span>
+        Reviewed by <span itemprop="reviewer"><%= author_name(@post) %></span>
+        Rating: <span itemprop="rating"><%= @post.rating %></span>
+      </div>
+    </div>
   <% end %>
+
+  <% if (ENV['SHOW_SOCIAL'] && !(hide_social_sharing rescue false))%>
+    <strong>Share:</strong>
+    <div id="addthis_responsive_sharing_9onr"></div>
+  <% end %>
+  <br>
+   <% if (tags = @post.tags).any? %>
+    <div class="row row-top-0">
+      <div class="col-md-12 no-padding blog-tags">
+        <b>Tags:&nbsp;</b>
+        <%= raw tags.collect { |tag| link_to tag, refinery.blog_tagged_posts_path(tag.id, tag.name.parameterize) }.to_sentence %>
+      </div>
+    </div>
+  <% end %>
+  <br>
+
 </article>
 <%= render '/refinery/draft_page_message' unless @post.nil? or @post.live? -%>
-<%= render 'nav' if next_or_previous?(@post) %>
