--- a/app/views/refinery/blog/posts/archive.html.erb
+++ b/app/views/refinery/blog/posts/archive.html.erb
@@ -5,7 +5,7 @@
   <% if @posts.any? %>
     <section id="blog_posts">
       <%= render :partial => "/refinery/blog/shared/post", :collection => @posts %>
-      <%= will_paginate @posts %>
+      <%= will_paginate @posts,:previous_label => '<', :next_label => '>' %>
     </section>
   <% else %>
     <p><%= t('.no_blog_articles_posted', :date => @date_title) %></p>
@@ -14,5 +14,5 @@
 
 <%= render '/refinery/blog/shared/body_content_right' %>
 
-<%= render "/refinery/content_page" %>
+<%= render '/refinery/content_page', :hide_sections => :body_content_title %>
 <% content_for :stylesheets, stylesheet_link_tag('refinery/blog/frontend') %>
