--- a/app/views/refinery/blog/posts/index.html.erb
+++ b/app/views/refinery/blog/posts/index.html.erb
@@ -1,20 +1,17 @@
 <% content_for :body do %>
   <%= raw @page.content_for(Refinery::Pages.default_parts.first.to_sym) if Refinery::Pages.default_parts.any? %>
-
   <% if @posts.any? %>
+  
     <section id="blog_posts">
       <%= render :partial => "/refinery/blog/shared/post", :collection => @posts %>
-      <%= will_paginate @posts %>
+      <%= will_paginate @posts,:previous_label => '<', :next_label => '>' %>
     </section>
   <% else %>
-    <p><%= t('.no_blog_articles_yet') %></p>
+    <div class="blog-div">
+      <h2>No blog articles posted yet!</h2>
+    </div>
   <% end %>
 <% end %>
 
-<% content_for :side_body_prepend do -%>
-  <%= raw @page.content_for(Refinery::Pages.default_parts.second.to_sym) %>
-<% end if Refinery::Pages.default_parts.many? -%>
-<%= render '/refinery/blog/shared/body_content_right' %>
-
-<%= render "/refinery/content_page" %>
+<%= render '/refinery/content_page', :hide_sections => :body_content_title %>
 <% content_for :stylesheets, stylesheet_link_tag('refinery/blog/frontend') %>
