--- a/app/views/refinery/blog/posts/show.html.erb
+++ b/app/views/refinery/blog/posts/show.html.erb
@@ -1,12 +1,15 @@
 <% content_for :body do %>
-  <div id="show_blog_post">
-    <%= render 'post' %>
-  </div>
+	<% @blog_div_set = true %>
+	<div class="blog-div">
+	  <div id="show_blog_post">
+	    <%= render 'post' %>
+	  </div>
 
-  <%= render 'comments' %>
+  	<%= render 'comments' %>
+	</div>
 <% end %>
 
-<%= render '/refinery/blog/shared/body_content_right' %>
+<%# render '/refinery/blog/shared/body_content_right' %>
 
 <%= render "/refinery/content_page", :remove_automatic_sections => true %>
 
