--- a/app/views/refinery/blog/posts/_comments.html.erb
+++ b/app/views/refinery/blog/posts/_comments.html.erb
@@ -7,7 +7,7 @@
     <%= render :partial => "comment", :collection => comments %>
   <% end %>
 
-  <% if Refinery::Blog::Post.comments_allowed? %>
+  <%# if Refinery::Blog::Post.comments_allowed? %>
 
     <h4>
       <%= image_tag "comment-icon.png" %>
@@ -48,5 +48,5 @@
         <%= f.submit t('submit', :scope => 'refinery.blog.posts.show'), :class => "btn btn-primary" %>
       </div>
     <% end %>
-  <% end %>
+  <%# end %>
 </aside>
